--- a/src/index.css
+++ b/src/index.css
@@ -17,10 +17,6 @@
 
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  margin: 0;padding: 0; box-sizing: border-box;
 }
 
